feat: prisma vercel

--- a/apps/api/.env.development
+++ b/apps/api/.env.development
@@ -1,3 +1,9 @@
 NODE_ENV=development
 PORT=8000
-DATABASE_URL="mysql://root@localhost:3306/mydb"
+POSTGRES_URL="postgres://default:p9Se1YErfHvB@ep-dawn-lab-47759893-pooler.ap-southeast-1.postgres.vercel-storage.com:5432/verceldb"
+POSTGRES_PRISMA_URL="postgres://default:p9Se1YErfHvB@ep-dawn-lab-47759893-pooler.ap-southeast-1.postgres.vercel-storage.com:5432/verceldb?pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NON_POOLING="postgres://default:p9Se1YErfHvB@ep-dawn-lab-47759893.ap-southeast-1.postgres.vercel-storage.com:5432/verceldb"
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-dawn-lab-47759893-pooler.ap-southeast-1.postgres.vercel-storage.com"
+POSTGRES_PASSWORD="p9Se1YErfHvB"
+POSTGRES_DATABASE="verceldb"
