--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -17,6 +17,7 @@
     "@prisma/adapter-neon": "^5.8.0",
     "@prisma/client": "^5.8.0",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^1.41.2",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.10",
@@ -24,6 +25,7 @@
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "referral-codes": "^3.0.0",
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
@@ -35,6 +37,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.11",
     "@types/ws": "^8.5.10",
     "prisma": "^5.8.0",
     "tsconfig-paths": "^4.2.0"
