--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -10,6 +10,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "prisma": "npx prisma migrate dev --name init"
   },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
@@ -18,6 +21,7 @@
     "@prisma/client": "^5.8.0",
     "bcrypt": "^5.1.1",
     "cloudinary": "^1.41.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
     "dayjs": "^1.11.10",
@@ -34,6 +38,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.5",
